publish: Remove links to outdated repositories
generated from commit 53bc557bafb61babe9ac66f8421ec749228239be

--- a/developer.html
+++ b/developer.html
@@ -765,7 +765,7 @@ This plugin is disabled and is no longer supported.
 
 <h3 id="statistics">Statistics</h3>
 
-<p>Collects and stores statistics about the API usage. You can find more details on <a href="https://github.com/control-tower/ct-stadistics-plugin">this repo</a>.</p>
+<p>Collects and stores statistics about the API usage.</p>
 
 <h3 id="mongodb-sessions">MongoDB sessions</h3>
 
@@ -773,11 +773,11 @@ This plugin is disabled and is no longer supported.
 
 <h3 id="oauth-plugin">Oauth plugin</h3>
 
-<p>User management and authentication plugin. Supports email+password based registration, as well as Facebook, Twitter and Google+ oauth-based authentication. You can find more details on <a href="https://github.com/control-tower/ct-oauth-plugin">this repo</a>.</p>
+<p>User management and authentication plugin. Supports email+password based registration, as well as Facebook, Twitter and Google+ oauth-based authentication.</p>
 
 <h3 id="redis-cache">Redis cache</h3>
 
-<p>Redis-based caching for Control Tower. You can find more details on <a href="https://github.com/control-tower/ct-redis-cache">this repo</a>.</p>
+<p>Redis-based caching for Control Tower. </p>
 
 <aside class="notice">
 This plugin is disabled and is no longer supported.
